--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 .title {
   text-align: center;
   margin: 0;
-  font-size: 8em;
-  font-family: "Helvetica";
+  font-size: 6em;
+  font-family: "Courier New";
   font-weight: normal;
   color: white;
 }
