--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .main-header {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: black;
   padding-bottom: 10px;
 }
 
@@ -51,7 +51,7 @@ body {
 .footer {
   display: flex;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: black;
   padding: 10px;
 }
 
