--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   font-size: 6em;
   font-family: "Courier New";
   font-weight: bold;
-  color: rgb(142, 0, 206);
+  color: purple;
 }
 
 #card-container {
