--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
   text-align: center;
   margin: 0;
   font-size: 5em;
-  font-family: "Courier New";
+  font-family: "Silkscreen";
   font-weight: normal;
-  color: rgb(142, 0, 206);
+  color: rgb(0, 252, 0);
 }
 
 #current-outfit {
