--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   margin: 0;
   font-size: 5em;
-  font-family: "Silkscreen";
+  font-family: 'Silkscreen';
   font-weight: normal;
   color: rgb(0, 252, 0);
 }
