--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   text-align: center;
   margin: 0;
   font-size: 5em;
-  font-family: 'Silkscreen';
-  font-weight: normal;
+  font-family: "Courier New";
+  font-weight: bold;
   color: rgb(0, 252, 0);
 }
 
