--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
 .title {
   text-align: center;
   margin: 0;
-  font-size: 5em;
-  font-family: "Courier New";
-  font-weight: bold;
+  font-size: 2.5rem;
+  font-family: 'Silkscreen', sans-serif;
+  font-weight: normal;
   color: rgb(0, 252, 0);
 }
 
