--- a/style.css
+++ b/style.css
@@ -77,8 +77,9 @@ body {
 
 .card img {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 card-content ul {
