--- a/style.css
+++ b/style.css
@@ -77,9 +77,8 @@ body {
 
 .card img {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
-  border-radius: 5px;
+  height: auto;
+  display: block;
 }
 
 card-content ul {
